# X6100Control

./: .clang-format  .clang-tidy  .clangd  .cmake-format.json  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_buildroot.sh
aetherx6100ctrl/: CMakeLists.txt
aetherx6100ctrl/include/: CMakeLists.txt
buildroot/: .gitignore  cmake.sh  conf.sh  install.sh
cmake/: default_visibility.cmake  developer_mode.cmake  install_structure.cmake  installation.cmake  output_structure.cmake  packaging.cmake
cmake/compiler_flags/: cxx_iso_flags.cmake  cxx_standard.cmake  fast_math.cmake  ipo_support.cmake
cmake/dependencies/: openmp.cmake
examples/: CMakeLists.txt  atu.c  flow.c  ptt.c  vfo.c
include/: CMakeLists.txt
include/aether_radio/: CMakeLists.txt
include/aether_radio/x6100_control/: CMakeLists.txt  control.h  cpp_compat.h  macros.h  types.hpp
include/aether_radio/x6100_control/low/: control.h  flow.h  gpio.h
include/aether_radio/x6100_control/low_level/: CMakeLists.txt  baseband_stream.h  baseband_stream.hpp  control.h  flow.h  gpio.h
libx6100ctrl/: CMakeLists.txt
src/: CMakeLists.txt  control.c  flow.c  gpio.c
src/low/: control.c  flow.c  gpio.c
src/low_level/: CMakeLists.txt  baseband_stream.cpp  control.c  flow.c  gpio.c
x6100_control/: CMakeLists.txt
x6100_control/cmake/: install.cmake
x6100_control/include/: CMakeLists.txt
x6100_control/include/aether_radio/: CMakeLists.txt
x6100_control/include/aether_radio/x6100_control/: CMakeLists.txt  control.h  flow.h  gpio.h
x6100_control/src/: CMakeLists.txt  control.c
